# swauto

./: .gitignore  README.md
dotnet/SWAutomation.Core/: STADispatcher.cs  SWAutomation.Core.csproj  SWAutomation.Core.slnx  SWConnect.cs  SWDocuments.cs  SWSession.cs  packages.config
dotnet/SWAutomation.Core/Properties/: AssemblyInfo.cs
python/: build_script.py  pyproject.toml
python/src/swauto/: __init__.py  sw.py
