[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swauto"
version = "0.1.5"
description = "Python interface for SolidWorks automation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{name = "Malacai Hiebert"}]
dependencies = ["pythonnet==3.0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
swauto = ["_dotnet/*.dll"]

[tool.setuptools.packages.find]
where = ["src"]